--- a/.vuepress/styles/01-utilities/variables.styl
+++ b/.vuepress/styles/01-utilities/variables.styl
@@ -1,6 +1,10 @@
 $black = #000
 $blue = #4A90E2
 $charcoal = #2c3e50
+$charcoal-medium = #828689
 $charcoal-light = lighten($charcoal, 75%)
 $green = #3EAF7C
 $white = #FFF
+
+$card-radius = 5px
+$box-shadow = 0 0 15px rgba(0, 0, 0, .2)
