--- a/.vuepress/styles/03-base/overrides.styl
+++ b/.vuepress/styles/03-base/overrides.styl
@@ -5,6 +5,8 @@
         max-width: 100%
         margin: 0 auto
         padding: 0
+        a:hover
+            text-decoration: none
     .project-page-content
         max-width: 740px
         margin: 0 auto 
