--- a/.vuepress/styles/main.styl
+++ b/.vuepress/styles/main.styl
@@ -14,5 +14,6 @@
 @import "05-components/project-banner"
 @import "05-components/sliding-feature"
 @import "05-components/project-article"
+@import "05-components/blog-article-card"
 
 @import "06-pages/project-article-page"
