--- a/.vuepress/styles/05-components/card.styl
+++ b/.vuepress/styles/05-components/card.styl
@@ -2,7 +2,7 @@
   width: 100%
   box-shadow: 0 0 15px rgba(0, 0, 0, .2)
   border-radius: 5px
-  border: #FAFAFA
+  border: 1px solid #FAFAFA
 
 .card--horizontal
   display: flex
