Add card sorting article and images

--- a/.vuepress/styles/05-components/project-article.styl
+++ b/.vuepress/styles/05-components/project-article.styl
@@ -3,28 +3,31 @@
   padding-left: 0
 
 .project-article-list__item
-  padding: 1rem
   box-shadow: 2px 5px 15px rgba(0, 0, 0, .2)
   border-radius: 5px
   background: $white
   border: 1px solid $charcoal-light
   margin-bottom: 1rem
-  a
-    display: flex
-    align-items: center
-    justify-content: space-between
-    transition: all .3s ease
-    color: $charcoal
-    &:hover
-      text-decoration: none !important
-      color: $green
 
-.project-article-title
+.project-article-list__item__link
+  padding: 1rem
+  display: flex
+  align-items: center
+  justify-content: space-between
+  transition: all .3s ease
+  color: $charcoal
+  &:hover
+    text-decoration: none !important
+    color: $green
+
+.project-article-list__item-title
   margin: 0 !important 
 
-.project-article-tagline
+.project-article-list__item-tagline
   margin: 0
   font-size: .8rem
 
 .role-section
   margin-top: 4rem
+  &:last-of-type
+    margin-bottom: 4rem
