--- a/.vuepress/styles/06-pages/project-article-page.styl
+++ b/.vuepress/styles/06-pages/project-article-page.styl
@@ -1,2 +1,14 @@
 .project-article-page-header
   margin-top: 4rem
+
+.project-page-title
+  margin-bottom: .5rem
+
+.project-article-tagline
+  margin-top: 0
+  font-weight: bold
+  color: $charcoal-medium
+  font-size: 1.2rem
+
+.project-article-section
+  margin-bottom: 3rem !important
